# bochen-dev-server

./: Dockerfile  README.md  compose.yml  multistage.Dockerfile  pyproject.toml  standalone.Dockerfile
.github/workflows/: ci.yaml
src/app/: main.py
src/worker/: config.py  tasks.py
