[project]
name = "bochen-dev-server"
version = "0.1.1"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.5.3",
    "fastapi[standard]>=0.115.12",
    "redis>=6.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
hello = "main:hello"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.2",
    "fastapi-cli>=0.0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/app", "src/worker", "src/shared"]
